--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*
     Plugin: WP First Letter Avatar
-    Plugin website: https://github.com/DanielAGW/wp-first-letter-avatar
+    Website: http://dev49.net
 */
 
 
